--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 #server.port = 8081
 spring.datasource.url=jdbc:postgresql://db.bpwreuimskdgibtsfcis.supabase.co:5432/postgres?user=postgres&password=Rok1023916008**
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+## Hibernate ddl (create, create-drop, validate, update)
 spring.jpa.hibernate.ddl-auto=update
